:wrench: Update main styles
Signed-off-by: Marius Tulbure <marius@figshare.com>

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <title>Pitch you</title>
+
+    <script src="https://use.fontawesome.com/2135232295.js"></script>
   </head>
   <body>
     <noscript>
