--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0f0a0a">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <title>Pitch you</title>
+    <title>INview</title>
 
     <script src="https://use.fontawesome.com/2135232295.js"></script>
   </head>
